--- a/code/Styles/sandbox.scss
+++ b/code/Styles/sandbox.scss
@@ -7,17 +7,32 @@
 
 Health {
     position: absolute;
+    left: 100px;
+    bottom: 48px;
+    font-size: 30px;
+    color: rgba(190, 0, 0,1);
+    padding: 5px 20px;
+    align-items: center;
+    font-family: Poppins;
+    background-color: rgba(0, 0, 0,0.4);
+    border-bottom: 1px, white;
+    border-radius: 3px;
+}
+Ammo {
+    position: absolute;
     right: 100px;
     bottom: 48px;
     font-size: 30px;
-    font-weight: bold;
-    color: rgba(155, 0, 0,0.7);
-    height: 80px;
-    padding: 0 30px;
+    color: white;
+    padding: 5px 20px;
     align-items: center;
     font-family: Poppins;
-    background-color: rgba(0, 0, 0,0.3);
+    background-color: rgba(0, 0, 0,0.4);
+    border-bottom: 1px, white;
+    border-radius: 3px;
 }
+
+
 
 /*CurrentTool {
     border-left: 10px solid $blue;
