--- a/code/Styles/InventoryStyle/toolbar.scss
+++ b/code/Styles/InventoryStyle/toolbar.scss
@@ -3,7 +3,7 @@ InventoryBar
 {
     position: absolute;
     width: 100%;
-    bottom: 48px;
+    bottom: 10%;
     justify-content: center;
     align-items: flex-end;
     z-index: 100;
@@ -18,7 +18,7 @@ InventoryBar
 
 InventoryIcon {
     width: 80px;
-    height: 80px;
+    height: 30px;
     margin: 0px 2px;
     position: relative;
     transition: all 0.6s ease-in-out;
@@ -33,7 +33,7 @@ InventoryIcon {
         text-align: center;
         left: 0;
         right: 0;
-        font-size: 9px;
+        font-size: 14px;
         position: absolute;
         bottom: 0;
         opacity: 0.1;
@@ -55,8 +55,8 @@ InventoryIcon {
     &.active {
         background-color: rgba(255, 0, 0,0.1);
         border-bottom: 5px solid #3273eb;
-        height: 95px;
-        width: 95px;
+        height: 40px;
+        width: 90px;
         transition: all 0.1s ease-out;
 
         .slot-number {
@@ -66,7 +66,7 @@ InventoryIcon {
         .item-name {
             opacity: 0.5;
             transition: all 0.1s ease-out;
-            font-size: 11px;
+           // font-size: 16px;
         }
     }
 }
