--- a/code/ui/HealthBar.scss
+++ b/code/ui/HealthBar.scss
@@ -1,19 +1,24 @@
-Healthbar {
-    position: absolute;
-    bottom: 5%;
-    left: 5%;
-    width: 20%;
-    height: 16px;
+
+
+HealthBar {
+
+    margin-bottom: 10px;
+    width: 100%;
+    height: 10px;
     background-color: rgba(0,0,0,0.7);
-    padding: 2px;
-    align-items: flex-end;
-    border-bottom: 1px, white;
-    border-radius: 3px;
+    padding: 1px;
+    border-radius: 2px;
 }
 
-.fill {
+
+
+.healthfill {
+    
     width: 100%;
     height: 100%;
     background-color: rgba(190,0,0,0.7);
    
 }
+
+
+
