--- a/code/ui/Hud.razor
+++ b/code/ui/Hud.razor
@@ -12,7 +12,8 @@
 
 
 <root>
-    <HealthBar/>
+	<label class="template">press 1 or 2 to switch weapon. press F to spawn template item | github repository on assetparty page</label>
+    <StatsPanel/>
 	<Ammo/>
 	<Crosshair/>
 </root>
