add usp, add sexy reload sounds.

--- a/code/ui/Crosshair.scss
+++ b/code/ui/Crosshair.scss
@@ -2,7 +2,7 @@ Crosshair {
     position: absolute;
     z-index: -1;
     align-items: flex-end;
-    background-color: white;
+    background-color: rgba(200,200,200,0.6);
     mix-blend-mode: lighten;
     width: 5px;
     height: 5px;
