--- a/code/chat/Chat.razor
+++ b/code/chat/Chat.razor
@@ -3,7 +3,7 @@
 @using Sandbox.UI;
 @inherits PanelComponent
 @implements Component.INetworkListener
-@namespace Facepunch.Arena
+@namespace GeneralGame
 
 <root>
 	<div class="output">
