--- a/code/ui/NameTag.razor
+++ b/code/ui/NameTag.razor
@@ -1,6 +1,6 @@
 ﻿@using Sandbox;
 @inherits PanelComponent
-@namespace Facepunch.Arena
+@namespace GeneralGame
 
 @if ( Player.IsValid() && Player.LifeState == LifeState.Alive
 	&& Network.OwnerConnection is Connection owner
