--- a/code/ui/Scoreboard.razor
+++ b/code/ui/Scoreboard.razor
@@ -2,7 +2,7 @@
 @using System.Linq
 @using Sandbox;
 @inherits PanelComponent
-@namespace Facepunch.Arena
+@namespace GeneralGame
 
 <root>
 	<div class="table">
