--- a/code/ui/Lobby.razor
+++ b/code/ui/Lobby.razor
@@ -5,26 +5,26 @@
 @using Sandbox;
 @using Sandbox.Network
 @inherits PanelComponent
-@namespace Facepunch.Arena
+@namespace GeneralGame
 
 <root>
 	<div class="center">
 		<div class="left">
 			<div class="title">
-				Arena
+				FPS Base
 			</div>
 
 			<div class="explanation">
 				<p>
-					Simple fps template.
+					Simple multiplayer deathmatch game.
 				</p>
 			</div>
-
+			
 			<div class="button-list">
 				<div class="button" onclick=@( () => CreateServer() )>
 					Create Server
 				</div>
-
+				
 				<div class="button" onclick=@( () => Quit() )>
 					Quit
 				</div>
@@ -36,18 +36,18 @@
 				<div class="title">Servers</div>
 			</div>
 
-			@if (IsRefreshing)
+			@if ( IsRefreshing )
 			{
 				<label>Refreshing the server list, please wait...</label>
 			}
-			else if (List.Count == 0)
+			else if ( List.Count == 0 )
 			{
 				<label>No servers were found, create one to play.</label>
 			}
 			else
 			{
 				<div class="button-list">
-					@foreach (var lobby in List)
+					@foreach ( var lobby in List )
 					{
 						<div class="button" onclick=@( () => OpenLobby( lobby ) )>
 							<div class="title">
@@ -71,40 +71,33 @@
 	</div>
 </root>
 
-
-
-
-
-
-
-
 @code
 {
 	private bool IsRefreshing { get; set; }
 	private List<LobbyInformation> List { get; set; } = new();
-
+	
 	protected override void OnFixedUpdate()
 	{
-
+		
 	}
-
+	
 	protected override void OnEnabled()
 	{
 		base.OnEnabled();
-
+		
 		_ = RefreshLobbyList();
 	}
 
 	protected override void OnUpdate()
 	{
-
+		
 	}
-
-	protected override int BuildHash() => HashCode.Combine(RealTime.Now);
-
+	
+	protected override int BuildHash() => HashCode.Combine( RealTime.Now );
+	
 	private async Task RefreshLobbyList()
 	{
-		while (true)
+		while ( true )
 		{
 			IsRefreshing = true;
 			StateHasChanged();
@@ -114,18 +107,18 @@
 			IsRefreshing = false;
 			StateHasChanged();
 
-			await Task.DelayRealtimeSeconds(5f);
+			await Task.DelayRealtimeSeconds( 5f );
 		}
 	}
 
-	private void OpenLobby(LobbyInformation lobby)
+	private void OpenLobby( LobbyInformation lobby )
 	{
-		GameNetworkSystem.Connect(lobby.LobbyId);
+		GameNetworkSystem.Connect( lobby.LobbyId );
 	}
 
 	private void CreateServer()
 	{
-		GameManager.ActiveScene.LoadFromFile("scenes/datacore.scene");
+		GameManager.ActiveScene.LoadFromFile( "scenes/datacore.scene" );
 	}
 
 	private void Quit()
