refactoring, viewmodel fix, zombies fix

--- a/code/ui/StartLobby.razor
+++ b/code/ui/StartLobby.razor
@@ -118,7 +118,7 @@
 
 	private void CreateServer()
 	{
-		GameManager.ActiveScene.LoadFromFile( "scenes/datacore.scene" );
+		GameManager.ActiveScene.LoadFromFile("scenes/dom.scene");
 	}
 
 	private void Quit()
