--- a/code/ui/Hud.razor
+++ b/code/ui/Hud.razor
@@ -9,17 +9,25 @@
 <root>
 	@{
 		var weapon = LocalPlayer.Weapons.Deployed;
+
+		BaseGun bsGun = null;
 	}
-	
-	@if ( weapon.IsValid() && LocalPlayer.LifeState == LifeState.Alive  )
+
+	@if (weapon.IsValid() && weapon.Components.GetInDescendantsOrSelf<BaseGun>(true).IsValid())
 	{
-		@* <div class="ammo">
+		bsGun = weapon.Components.GetInDescendantsOrSelf<BaseGun>();
+	}
+
+
+	@if (bsGun.IsValid() && LocalPlayer.LifeState == LifeState.Alive)
+	{
+
+		<div class="ammo">
 			@{
-				var totalAmmo = LocalPlayer.Ammo.Get( weapon.AmmoType );
+				var totalAmmo = LocalPlayer.Ammo.Get(bsGun.AmmoType);
 			}
-			
-			<label class="clip">@weapon.AmmoInClip</label>/<label class="total">@totalAmmo</label>
-		</div> *@
+			<label class="clip">@bsGun.AmmoInClip</label>/<label class="total">@totalAmmo</label>
+		</div>
 	}
 	
 	<div class="center">
@@ -43,10 +51,6 @@
 		}
 	}
 
-	protected override void OnUpdate()
-	{
-		SetClass( "hitmarker", LocalPlayer.IsValid() && LocalPlayer.LastHitmarkerTime < 0.1f );
-	}
 	
 	protected override int BuildHash() => HashCode.Combine( RealTime.Now );
 }
