--- a/code/Features/DisableShadows/DisableShadowsWindow.razor
+++ b/code/Features/DisableShadows/DisableShadowsWindow.razor
@@ -16,7 +16,7 @@
        
             <div class="title">Disable shadows?</div>
       
-            <div class="message">That make your fps much better</div>
+            <div class="message">That make your fps better</div>
         
         
             <div id="choices">
