--- a/Code/UI/Style.scss
+++ b/Code/UI/Style.scss
@@ -5,13 +5,13 @@ $fullscreen-blur: blur( 10px );
 $fullscreen-bg: rgba(50, 50, 50, 0.5);
 
 .stxt {
-    //font-family: zekton;
+    font-family: Manrope;
     color: white;
     font-size: 16px;
     text-shadow: 2px 1px 4px white;
 }
 .txt {
-    //font-family: opem;
+    font-family: Manrope;
     font-size: 24px;
     color: white;
     text-shadow: 2px 1px 4px white;
