--- a/Code/Weapons/Gun/GunEditor/OffsetPanel.razor
+++ b/Code/Weapons/Gun/GunEditor/OffsetPanel.razor
@@ -123,10 +123,11 @@
         <div class="guide">
             <text class="subTitle">Right mouse to rotate</text>
             <text class="subTitle">Left mouse to move</text>
+            <text class="subTitle">Wheel to zoom</text>
         </div>
 
-
         <button class="btn" onclick=@( () => GunEditor.Instance.AnaliseAnimationsSpeed())>Analise animations time</button>
+
     </div>
    
 </root>
