fucking with network part 2

--- a/Code/UI/Hud/Hud.razor
+++ b/Code/UI/Hud/Hud.razor
@@ -42,7 +42,7 @@
        <div class="health">
            
             <img class="img" src="ui/hud_sheld.png" />
-            <div class="num">@Player.CPly().HealthController.Health</div>
+            <div class="num">@Math.Round(Player.CPly().HealthController.Health)</div>
        </div>
 
 
